--- a/dashboard.html
+++ b/dashboard.html
@@ -716,7 +716,7 @@
           margin-right: 8px !important;
         }
       }
-      ._n5lh69r {
+      .va-top-h {
         display: table-cell !important;
         width: 100% !important;
         vertical-align: top !important;
