--- a/login-security.html
+++ b/login-security.html
@@ -285,7 +285,7 @@
                                         <div class="_s50zru">
                                           <div style="margin-top: 24px">
                                             <div class="_hgs47m">
-                                              <div class="_n5lh69r">
+                                              <div class="va-top-h">
                                                 <div class="_1p3joamp">
                                                   Password
                                                 </div>
@@ -300,7 +300,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="_1rtgmd8y">
+                                              <div class="va-top-nowrap">
                                                 <div class="_1p3joamp">
                                                   <div class="_1asnseo">
                                                     <button
@@ -319,12 +319,12 @@
                                         <div class="_s50zru">
                                           <div style="margin-top: 24px">
                                             <div class="_hgs47m">
-                                              <div class="_n5lh69r">
+                                              <div class="va-top-h">
                                                 <div class="_1p3joamp">
                                                   Password
                                                 </div>
                                               </div>
-                                              <div class="_1rtgmd8y">
+                                              <div class="va-top-nowrap">
                                                 <div class="_1p3joamp">
                                                   <div class="_1asnseo">
                                                     <button
@@ -488,7 +488,7 @@
                                                     </div>
                                                     <div class="_1n9nq7g">
                                                       <div class="_hgs47m">
-                                                        <div class="_n5lh69r">
+                                                        <div class="va-top-h">
                                                           <div
                                                             class="_121z06r2"
                                                           >
@@ -1418,7 +1418,7 @@
                                           <div class="_s50zru">
                                             <div style="margin-top: 24px">
                                               <div class="_hgs47m">
-                                                <div class="_n5lh69r">
+                                                <div class="va-top-h">
                                                   <div class="_1p3joamp">
                                                     Password
                                                   </div>
@@ -1433,7 +1433,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_1rtgmd8y">
+                                                <div class="va-top-nowrap">
                                                   <div class="_1p3joamp">
                                                     <div class="_1asnseo">
                                                       <button
@@ -1452,12 +1452,12 @@
                                           <div class="_s50zru">
                                             <div style="margin-top: 24px">
                                               <div class="_hgs47m">
-                                                <div class="_n5lh69r">
+                                                <div class="va-top-h">
                                                   <div class="_1p3joamp">
                                                     Password
                                                   </div>
                                                 </div>
-                                                <div class="_1rtgmd8y">
+                                                <div class="va-top-nowrap">
                                                   <div class="_1p3joamp">
                                                     <div class="_1asnseo">
                                                       <button
@@ -1635,7 +1635,7 @@
                                                       </div>
                                                       <div class="_1n9nq7g">
                                                         <div class="_hgs47m">
-                                                          <div class="_n5lh69r">
+                                                          <div class="va-top-h">
                                                             <div
                                                               class="_121z06r2"
                                                             >
