--- a/payment.html
+++ b/payment.html
@@ -751,7 +751,7 @@
                                                               /><span
                                                                 class="_qcdbez"
                                                                 ><div
-                                                                  class="_nncr1bm"
+                                                                  class="va-container-vv"
                                                                 >
                                                                   <div
                                                                     class="cell-middle"
