--- a/preferences.html
+++ b/preferences.html
@@ -272,7 +272,7 @@
                                 <div class="_s50zru">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
-                                      <div class="_n5lh69r">
+                                      <div class="va-top-h">
                                         <div class="_1p3joamp">
                                           Preferred language
                                         </div>
@@ -285,7 +285,7 @@
                                           <div class="_czm8crp">English</div>
                                         </div>
                                       </div>
-                                      <div class="_1rtgmd8y">
+                                      <div class="va-top-nowrap">
                                         <div class="_1p3joamp">
                                           <div class="_1asnseo">
                                             <button
@@ -304,12 +304,12 @@
                                 <div class="_s50zru">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
-                                      <div class="_n5lh69r">
+                                      <div class="va-top-h">
                                         <div class="_1p3joamp">
                                           Preferred language
                                         </div>
                                       </div>
-                                      <div class="_1rtgmd8y">
+                                      <div class="va-top-nowrap">
                                         <div class="_1p3joamp">
                                           <div class="_1asnseo">
                                             <button
@@ -752,7 +752,7 @@
                                 <div class="_s50zru">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
-                                      <div class="_n5lh69r">
+                                      <div class="va-top-h">
                                         <div class="_1p3joamp">
                                           Preferred currency
                                         </div>
@@ -767,7 +767,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_1rtgmd8y">
+                                      <div class="va-top-nowrap">
                                         <div class="_1p3joamp">
                                           <div class="_1asnseo">
                                             <button
@@ -786,12 +786,12 @@
                                 <div class="_s50zru">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
-                                      <div class="_n5lh69r">
+                                      <div class="va-top-h">
                                         <div class="_1p3joamp">
                                           Preferred currency
                                         </div>
                                       </div>
-                                      <div class="_1rtgmd8y">
+                                      <div class="va-top-nowrap">
                                         <div class="_1p3joamp">
                                           <div class="_1asnseo">
                                             <button
@@ -991,7 +991,7 @@
                                 <div class="_s50zru">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
-                                      <div class="_n5lh69r">
+                                      <div class="va-top-h">
                                         <div class="_1p3joamp">Time zone</div>
                                         <div
                                           style="
@@ -1004,7 +1004,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_1rtgmd8y">
+                                      <div class="va-top-nowrap">
                                         <div class="_1p3joamp">
                                           <div class="_1asnseo">
                                             <button
@@ -1023,10 +1023,10 @@
                                 <div class="_s50zru">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
-                                      <div class="_n5lh69r">
+                                      <div class="va-top-h">
                                         <div class="_1p3joamp">Time zone</div>
                                       </div>
-                                      <div class="_1rtgmd8y">
+                                      <div class="va-top-nowrap">
                                         <div class="_1p3joamp">
                                           <div class="_1asnseo">
                                             <button
@@ -1979,7 +1979,7 @@
                                     <div class="_s50zru">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
-                                          <div class="_n5lh69r">
+                                          <div class="va-top-h">
                                             <div class="_1p3joamp">
                                               Preferred language
                                             </div>
@@ -1994,7 +1994,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1rtgmd8y">
+                                          <div class="va-top-nowrap">
                                             <div class="_1p3joamp">
                                               <div class="_1asnseo">
                                                 <button
@@ -2013,12 +2013,12 @@
                                     <div class="_s50zru">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
-                                          <div class="_n5lh69r">
+                                          <div class="va-top-h">
                                             <div class="_1p3joamp">
                                               Preferred language
                                             </div>
                                           </div>
-                                          <div class="_1rtgmd8y">
+                                          <div class="va-top-nowrap">
                                             <div class="_1p3joamp">
                                               <div class="_1asnseo">
                                                 <button
@@ -2294,7 +2294,7 @@
                                     <div class="_s50zru">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
-                                          <div class="_n5lh69r">
+                                          <div class="va-top-h">
                                             <div class="_1p3joamp">
                                               Preferred currency
                                             </div>
@@ -2309,7 +2309,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1rtgmd8y">
+                                          <div class="va-top-nowrap">
                                             <div class="_1p3joamp">
                                               <div class="_1asnseo">
                                                 <button
@@ -2328,12 +2328,12 @@
                                     <div class="_s50zru">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
-                                          <div class="_n5lh69r">
+                                          <div class="va-top-h">
                                             <div class="_1p3joamp">
                                               Preferred currency
                                             </div>
                                           </div>
-                                          <div class="_1rtgmd8y">
+                                          <div class="va-top-nowrap">
                                             <div class="_1p3joamp">
                                               <div class="_1asnseo">
                                                 <button
@@ -2536,7 +2536,7 @@
                                     <div class="_s50zru">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
-                                          <div class="_n5lh69r">
+                                          <div class="va-top-h">
                                             <div class="_1p3joamp">
                                               Time zone
                                             </div>
@@ -2551,7 +2551,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1rtgmd8y">
+                                          <div class="va-top-nowrap">
                                             <div class="_1p3joamp">
                                               <div class="_1asnseo">
                                                 <button
@@ -2570,12 +2570,12 @@
                                     <div class="_s50zru">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
-                                          <div class="_n5lh69r">
+                                          <div class="va-top-h">
                                             <div class="_1p3joamp">
                                               Time zone
                                             </div>
                                           </div>
-                                          <div class="_1rtgmd8y">
+                                          <div class="va-top-nowrap">
                                             <div class="_1p3joamp">
                                               <div class="_1asnseo">
                                                 <button
