--- a/profile.html
+++ b/profile.html
@@ -3301,7 +3301,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                         </div>
                         <div style="margin-top: 16px">
                           <div class="_hgs47m">
-                            <div class="_1thk0tsb">
+                            <div class="va-top">
                               <div style="margin-top: 2px; margin-right: 16px">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -3322,7 +3322,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                 </svg>
                               </div>
                             </div>
-                            <div class="_n5lh69r">
+                            <div class="va-top-h">
                               <div style="margin-bottom: 4px">
                                 <section>
                                   <h2
@@ -3350,7 +3350,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                         </div>
                         <div style="margin-top: 16px">
                           <div class="_hgs47m">
-                            <div class="_1thk0tsb">
+                            <div class="va-top">
                               <div style="margin-top: 2px; margin-right: 16px">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -3371,7 +3371,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                 </svg>
                               </div>
                             </div>
-                            <div class="_n5lh69r">
+                            <div class="va-top-h">
                               <div style="margin-bottom: 4px">
                                 <section>
                                   <h2
