--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -120,7 +120,7 @@
                                                 ></path>
                                               </svg>
                                             </div>
-                                            <div class="_1u1cgx19">
+                                            <div class="va-middle-vh">
                                               <div class="_1w14zmh">
                                                 <input
                                                   class="_oqur3jl"
