--- a/resources.html
+++ b/resources.html
@@ -111,7 +111,7 @@
                                                 ></path>
                                               </svg>
                                             </div>
-                                            <div class="_1u1cgx19">
+                                            <div class="va-middle-vh">
                                               <div class="_1w14zmh">
                                                 <input
                                                   type="text"
@@ -333,7 +333,7 @@
                                     ></path>
                                   </svg>
                                 </div>
-                                <div class="_1u1cgx19">
+                                <div class="va-middle-vh">
                                   <div class="_1w14zmh">
                                     <input
                                       class="_zxqapn5"
