--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1155,7 +1155,7 @@
                                                   height: 46px;
                                                 "
                                               >
-                                                <div class="_nncr1bm">
+                                                <div class="va-container-vv">
                                                   <div class="cell-middle">
                                                     INR
                                                   </div>
