--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1300,7 +1300,7 @@
                               >
                                 <label class="_rin72m" for="rfi_opt_out"
                                   ><div class="_hgs47m">
-                                    <div class="_1thk0tsb">
+                                    <div class="va-top">
                                       <div class="_aaxh23">
                                         <span class="_foa2bi"
                                           ><input
@@ -1336,7 +1336,7 @@
                                         ></span>
                                       </div>
                                     </div>
-                                    <div class="_n5lh69r">
+                                    <div class="va-top-h">
                                       <div class="_7i43np">
                                         <span class="_jmgxek"
                                           ><span class="_4gelgl"
