--- a/submission/cancel.html
+++ b/submission/cancel.html
@@ -1061,7 +1061,7 @@
                               <div style="margin-bottom: 24px">
                                 <div>
                                   <div class="_hgs47m">
-                                    <div class="_1thk0tsb">
+                                    <div class="va-top">
                                       <input
                                         aria-label="strict"
                                         id="strict"
@@ -1072,7 +1072,7 @@
                                         value="CANCEL_STRICT"
                                       />
                                     </div>
-                                    <div class="_n5lh69r">
+                                    <div class="va-top-h">
                                       <div style="margin-left: 16px">
                                         <div style="margin-bottom: 8px">
                                           <div class="_h6avcp2">
@@ -1098,7 +1098,7 @@
                                 </div>
                                 <div>
                                   <div class="_hgs47m">
-                                    <div class="_1thk0tsb">
+                                    <div class="va-top">
                                       <input
                                         aria-label="flexible"
                                         id="flexible"
@@ -1110,7 +1110,7 @@
                                         checked=""
                                       />
                                     </div>
-                                    <div class="_n5lh69r">
+                                    <div class="va-top-h">
                                       <div style="margin-left: 16px">
                                         <div style="margin-bottom: 8px">
                                           <div class="_h6avcp2">
