--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -379,7 +379,7 @@
                                       type="hidden"
                                       value="0GK1hkGg1kPGJ4rea4DKyNApow5"
                                     /><span class="_qcdbez"
-                                      ><div class="_nncr1bm">
+                                      ><div class="va-container-vv">
                                         <div class="cell-middle">
                                           <div
                                             class="_wn4bip"
