--- a/preferences.html
+++ b/preferences.html
@@ -350,7 +350,7 @@
                                               >Preferred language</label
                                             >
                                             <div class="_wlf6154">
-                                              <div class="_y9ev9r">
+                                              <div class="overflow-hidden">
                                                 <select
                                                   id="preferred_locale"
                                                   name="preferred_locale"
@@ -825,7 +825,7 @@
                                               >Preferred currency</label
                                             >
                                             <div class="_wlf6154">
-                                              <div class="_y9ev9r">
+                                              <div class="overflow-hidden">
                                                 <select
                                                   id="native_currency"
                                                   name="native_currency"
@@ -1058,7 +1058,7 @@
                                               >Time zone</label
                                             >
                                             <div class="_wlf6154">
-                                              <div class="_y9ev9r">
+                                              <div class="overflow-hidden">
                                                 <select
                                                   id="timezone"
                                                   name="timezone"
@@ -2059,7 +2059,7 @@
                                                   >Preferred language</label
                                                 >
                                                 <div class="_wlf6154">
-                                                  <div class="_y9ev9r">
+                                                  <div class="overflow-hidden">
                                                     <select
                                                       id="preferred_locale"
                                                       name="preferred_locale"
@@ -2367,7 +2367,7 @@
                                                   >Preferred currency</label
                                                 >
                                                 <div class="_wlf6154">
-                                                  <div class="_y9ev9r">
+                                                  <div class="overflow-hidden">
                                                     <select
                                                       id="native_currency"
                                                       name="native_currency"
@@ -2609,7 +2609,7 @@
                                                   >Time zone</label
                                                 >
                                                 <div class="_wlf6154">
-                                                  <div class="_y9ev9r">
+                                                  <div class="overflow-hidden">
                                                     <select
                                                       id="timezone"
                                                       name="timezone"
