--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1089,7 +1089,7 @@
                                 >
                               </div>
                               <div class="_wlf6154">
-                                <div class="_y9ev9r">
+                                <div class="overflow-hidden">
                                   <select
                                     id="experience_default_time"
                                     name="experience_default_time"
