--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1081,7 +1081,7 @@
                                   </div>
                                 </div>
                                 <div class="_wlf6154">
-                                  <div class="_y9ev9r">
+                                  <div class="overflow-hidden">
                                     <select
                                       id="trip_template_confirmed_booking_lead_hours"
                                       name="trip_template_confirmed_booking_lead_hours"
@@ -1205,7 +1205,7 @@
                                   </div>
                                 </div>
                                 <div class="_wlf6154">
-                                  <div class="_y9ev9r">
+                                  <div class="overflow-hidden">
                                     <select
                                       id="trip_template_booking_lead_hours"
                                       name="trip_template_booking_lead_hours"
