--- a/transaction_history.html
+++ b/transaction_history.html
@@ -634,7 +634,7 @@
                                               <div class="_e296pg">
                                                 <div class="_9hxttoo">
                                                   <div class="_wlf6154">
-                                                    <div class="_y9ev9r">
+                                                    <div class="overflow-hidden">
                                                       <select
                                                         id="payout-method-select"
                                                         name="payout-method-select"
@@ -672,7 +672,7 @@
                                               <div class="_e296pg">
                                                 <div class="_9hxttoo">
                                                   <div class="_wlf6154">
-                                                    <div class="_y9ev9r">
+                                                    <div class="overflow-hidden">
                                                       <select
                                                         id="listings-select"
                                                         name="listings-select"
@@ -739,7 +739,7 @@
                                                           <div class="_16i0gg4">
                                                             From:
                                                           </div>
-                                                          <div class="_y9ev9r">
+                                                          <div class="overflow-hidden">
                                                             <select
                                                               id="filter-start-month-select"
                                                               name="filter-start-month-select"
@@ -822,7 +822,7 @@
                                                           Year</label
                                                         >
                                                         <div class="_wlf6154">
-                                                          <div class="_y9ev9r">
+                                                          <div class="overflow-hidden">
                                                             <select
                                                               id="filter-start-year-select"
                                                               name="filter-start-year-select"
@@ -953,7 +953,7 @@
                                                           <div class="_16i0gg4">
                                                             To:
                                                           </div>
-                                                          <div class="_y9ev9r">
+                                                          <div class="overflow-hidden">
                                                             <select
                                                               id="filter-end-month-select"
                                                               name="filter-end-month-select"
@@ -1036,7 +1036,7 @@
                                                           Year</label
                                                         >
                                                         <div class="_wlf6154">
-                                                          <div class="_y9ev9r">
+                                                          <div class="overflow-hidden">
                                                             <select
                                                               id="filter-end-year-select"
                                                               name="filter-end-year-select"
