--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="_10ejfg4u">
                   <div>
-                    <div class="_cfvh61">
+                    <div class="inherit-hide-print">
                       <div class="_dx84z0">
                         <div>
                           <div class="_1wsro53">
@@ -209,7 +209,7 @@
                 </div>
                 <div class="cell-middle nav-links-lg">
                   <div>
-                    <div class="_cfvh61">
+                    <div class="inherit-hide-print">
                       <nav aria-label="Main navigation menu">
                         <ul class="_1s04l2o">
                           <li class="_1g2dfiu"></li>
@@ -722,7 +722,7 @@
         data-hypernova-id="fc18d03f-b51a-4201-9446-1a416bec48ef"
       >
         <div dir="ltr">
-          <div class="_cfvh61">
+          <div class="inherit-hide-print">
             <div class="_dtnpit">
               <footer role="contentinfo">
                 <div class="_121z06r2">
