--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -87,7 +87,7 @@
                   </div>
                   <div class="_10ejfg4u">
                     <div>
-                      <div class="_cfvh61">
+                      <div class="inherit-hide-print">
                         <div class="_dx84z0">
                           <div>
                             <div class="_1wsro53">
@@ -174,7 +174,7 @@
                   </div>
                   <div class="cell-middle">
                     <div data-showat="largeAndAbove">
-                      <div class="_cfvh61">
+                      <div class="inherit-hide-print">
                         <nav aria-label="Main navigation menu">
                           <ul class="_1s04l2o">
                             <li class="_1g2dfiu">
