--- a/resources.html
+++ b/resources.html
@@ -84,7 +84,7 @@
                     <div class="_10ejfg4u">
                       <div data-showat="mediumAndAbove">
                         <div style="margin-left: 8px">
-                          <div class="_cfvh61">
+                          <div class="inherit-hide-print">
                             <div class="_9jnsit">
                               <div>
                                 <div class="_1kthodf">
@@ -161,7 +161,7 @@
                       </div>
                     </div>
                     <div class="cell-middle">
-                      <div class="_cfvh61">
+                      <div class="inherit-hide-print">
                         <div data-hideat="largeAndAbove" class="menu-btn-xs">
                           <div style="margin-right: 24px">
                             <button
@@ -306,7 +306,7 @@
             </div>
             <div class="_1htw6hi"></div>
             <div data-hideat="mediumAndAbove" class="search-bar-xs">
-              <div class="_cfvh61">
+              <div class="inherit-hide-print">
                 <div class="_9jnsit">
                   <div>
                     <div class="_1kthodf">
