--- a/specific_trip.html
+++ b/specific_trip.html
@@ -993,7 +993,7 @@
                                                         </div>
                                                       </div>
                                                       <div>
-                                                        <div class="_cfvh61">
+                                                        <div class="inherit-hide-print">
                                                           <div
                                                             aria-label="Co-travelers: Jose Angelo"
                                                           >
@@ -1453,7 +1453,7 @@
                                                             ></span
                                                           >
                                                         </div>
-                                                        <div class="_cfvh61">
+                                                        <div class="inherit-hide-print">
                                                           <span class="_jan9qal"
                                                             ><span
                                                               class="ll4r2nl dir dir-ltr"
