--- a/resources.html
+++ b/resources.html
@@ -1088,7 +1088,7 @@
                                   <div class="gallery-lg">
                                     <div class="_h69t7tv">
                                       <div class="_1hytef3">
-                                        <div class="_ctz3yu">
+                                        <div class="vh-100">
                                           <div class="_e296pg">
                                             <div
                                               class="_18tkw86"
@@ -1815,7 +1815,7 @@
                                     </div>
                                     <div class="_16xcv07v">
                                       <div class="header__logo">
-                                        <div class="_ctz3yu">
+                                        <div class="vh-100">
                                           <div class="_e296pg">
                                             <div
                                               class="_18tkw86"
@@ -2542,7 +2542,7 @@
                                     </div>
                                     <div class="_pawvzww">
                                       <div class="_1lo0c2q">
-                                        <div class="_ctz3yu">
+                                        <div class="vh-100">
                                           <div class="_e296pg">
                                             <div
                                               class="_18tkw86"
@@ -3268,7 +3268,7 @@
                                       </div>
                                     </div>
                                     <div class="_i5m7e6w">
-                                      <div class="_ctz3yu">
+                                      <div class="vh-100">
                                         <div class="_e296pg">
                                           <div
                                             class="_18tkw86"
