--- a/submission/tq.html
+++ b/submission/tq.html
@@ -1038,7 +1038,7 @@
                       <div class="_g7lz6c">Technical quality</div>
                     </div>
                     <section class="_92ham2">
-                      <div class="_ctz3yu">
+                      <div class="vh-100">
                         <div class="_czq6d5">
                           <div class="_1j6mvlwv">
                             <div class="_foa5ri">
