--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1041,7 +1041,7 @@
                       </div>
                     </div>
                     <section class="_92ham2">
-                      <div class="_ctz3yu">
+                      <div class="vh-100">
                         <div class="_czq6d5">
                           <div class="_1j6mvlwv">
                             <div class="_foa5ri">
