--- a/submission/etd.html
+++ b/submission/etd.html
@@ -1035,7 +1035,7 @@
                       <div class="_g7lz6c">Easy to do</div>
                     </div>
                     <section class="_92ham2">
-                      <div class="_ctz3yu">
+                      <div class="vh-100">
                         <div class="_czq6d5">
                           <div class="_1j6mvlwv">
                             <div class="_foa5ri">
