--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1041,7 +1041,7 @@
                       </div>
                     </div>
                     <section class="_92ham2">
-                      <div class="_ctz3yu">
+                      <div class="vh-100">
                         <div class="_czq6d5">
                           <div class="_1ory3bb" style="max-width: 626px">
                             <div class="_foa5ri">
